/**
 * Copyright 2026 Salesforce, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import * as PromoCalloutStories from './promo-callout.stories';
import { composeStories } from '@storybook/react-vite';
import { render } from '@testing-library/react';
import { describe, test, expect } from 'vitest';

const { Default, HtmlContent, NoPromo } = composeStories(PromoCalloutStories);

describe('PromoCallout Snapshots', () => {
    test('Default snapshot', () => {
        const { container } = render(<Default />);
        expect(container).toMatchSnapshot();
    });

    test('HtmlContent snapshot', () => {
        const { container } = render(<HtmlContent />);
        expect(container).toMatchSnapshot();
    });

    test('NoPromo snapshot', () => {
        const { container } = render(<NoPromo />);
        expect(container).toMatchSnapshot();
    });
});
